--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,9 +27,9 @@ code {
 }
 
 .container {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 36px;
 }
